...
        },

        floatingActionButton = {
            FloatingActionButton(
                onClick = {navController.navigate("trening_screen") },
                containerColor = MaterialTheme.colorScheme.primary,
                modifier = Modifier.testTag("dodajTreningButton")
            )
            {
                Text("+", color = MaterialTheme.colorScheme.primary)
            }
        }
    ) { paddingValues ->
...
